tinyc/test/bad/struct-as-bool-nag.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    !s;
    return 0;
}
